--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Upload Release
         uses: ncipollo/release-action@v1.12.0
         with:
-          artifacts: "release.zip"
+          artifacts: "./build/release.zip"
           token: ${{ secrets.GITHUB_TOKEN }}
     
   
