--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
         uses: thedoctor0/zip-release@0.7.5
         with:
           type: 'zip'
-          filename: release.zip
+          filename: manhua-check-extension.zip
           directory: ./build
       - name: Upload Release
         uses: ncipollo/release-action@v1.12.0
@@ -48,6 +48,6 @@ jobs:
           tag: ${{ steps.tag_version.outputs.new_tag }}
           name: Release ${{ steps.tag_version.outputs.new_tag }}
           body: ${{ steps.tag_version.outputs.changelog }}
-          artifacts: "./build/release.zip"
+          artifacts: "./build/manhua-check-extension.zip"
     
   
