--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         id: get_version
         run: |
           TAG=${{ steps.tag_version.outputs.new_tag }}
-          echo "VERSION=${TAG#v}" >> $GITHUB_ENV
+          run: echo ::set-output name=VERSION::$(echo ${TAG#v})
       - name: Update manifest.json version
         uses: jossef/action-set-json-field@v2.1
         with:
