--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,15 +31,16 @@ jobs:
       - name: Build extension
         run: npm run build
       - name: Get version
+        id: get_version
         run: |
              TAG=${{ steps.tag_version.outputs.new_tag }}
-             echo "VERSION=${TAG#v}" >> $GITHUB_ENV
+             echo "VERSION=${TAG#v}" >> "$GITHUB_OUTPUT"
       - name: Update manifest.json version
         uses: jossef/action-set-json-field@v2.1
         with:
           file: ./build/manifest.json
           field: version
-          value: ${VERSION}
+          value: ${{ steps.get_version.outputs.VERSION }}
       - name: Zip Build
         uses: thedoctor0/zip-release@0.7.5
         with:
