--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,6 +16,9 @@
       "128": "icons/icon128.png"
     }
   },
+  "background": {
+    "page": "bg.html"
+  },
   "permissions": [
     "storage"
   ]
