--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,10 +17,8 @@
       "128": "icons/icon128.png"
     }
   },
-  "background": {
-    "page": "bg.html"
-  },
   "permissions": [
-    "storage"
+    "storage",
+    "tabs"
   ]
 }
