--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,4 +53,4 @@ jobs:
           tag: ${{ steps.tag_version.outputs.new_tag }}
           name: Release ${{ steps.tag_version.outputs.new_tag }}
           body: ${{ steps.tag_version.outputs.changelog }}
-          artifacts: "./build/manhua-check-extension_${{ steps.tag_version.outputs.new_tag }}.zip"
+          artifacts: "./build/manhua-check-extension.zip"
